--- a/environment.yml
+++ b/environment.yml
@@ -9,10 +9,13 @@ dependencies:
   - jsonschema>=4.20.0
   - pyyaml>=6.0.1
   # Development dependencies
+  - pytest>=8.1.1
+  - pytest-cov>=4.1.0
+  - pytest-sugar>=1.0.0
   - ruff>=0.9.2
   - mypy>=1.14.1
   - types-jsonschema>=4.20.0
   - types-PyYAML>=6.0.1
   - pre-commit>=3.5.0
   - pip:
-    - -e .
+      - -e .
