add web front and backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 **/__pycache__
+*.py[cod]
+*$py.class
+*.so
+.Python
+.env
+.venv
+env/
+venv/
+ENV/
+.coverage
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.dmypy.json
+dmypy.json
+.tox/
+.nextflow/
+.DS_Store
+node_modules/
+dist/
