--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "rich>=13.9.4",
     "pyyaml>=6.0.1",
     "jsonschema>=4.20.0",
+    "aiohttp>=3.9.3",
 ]
 requires-python = ">=3.9"
 
